# quake-grade

./: .gitignore  README.md  app.py  pyproject.toml
src/modelling/: model.pkl  train.ipynb
src/modelling/dataset/: balanced_Sismos.csv  df_test.csv  df_train.csv
src/services/: llm_prompts.py  llm_service.py
src/ui/components/: data_loader.py  llm_insights.py  predictions.py  visualizations.py
src/ui/utils/: constants.py  helpers.py  validators.py
