[project]
name = "quake-grade"
version = "0.1.0"
description = "An intelligent seismic severity classification system that combines data analysis and Machine Learning to predict earthquake impact levels, supporting decision-making for natural disaster prevention."
readme = "README.md"
authors = [
    { name = "Santiago Bernardes", email = "santiagobernardes@gmail.com" }
]
requires-python = ">=3.13.3"
dependencies = []

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
