[project]
name = "quake-grade"
version = "0.1.0"
description = "An intelligent seismic severity classification system that combines data analysis and Machine Learning to predict earthquake impact levels, supporting decision-making for natural disaster prevention."
readme = "README.md"
authors = [
    { name = "Santiago Bernardes", email = "santiagobernardes@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pycaret==3.3.2", # has pandas, scikit-learn, matplotlib, jupyter
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "notebook>=7.4.3",
]

override-dependencies = [
    "kaleido==0.2.1" # OS incompatibility with v0.2.1.post1
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["UP007"]  # Ignore union syntax upgrade - causes runtime errors with Streamlit module imports

[tool.ruff.lint.per-file-ignores]
"**/train.*" = ["E501"]  # ignore line length for train files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


